[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "codelink"
version = "0.0.2"
authors = [
  { name="Ronny Scharf-Wildenhain", email="ronny.scharf08@gmail.com" },
]
description = "Node-based visual programming environment"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/j8sr0230/codelink"
"Bug Tracker" = "https://github.com/j8sr0230/codelink/issues"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]