[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codelink"
version = "0.0.18"
authors = [
    {name="Ronny Scharf-Wildenhain", email="ronny.scharf08@gmail.com" },
]
description = "Node-based visual programming environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide2>=5.15.8",
    "networkx>=3.1",
    "dask>=2023.2.1",
    "awkward>=2.3.1",
    "numpy>=1.24.3",
    "scipy>=1.11.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/j8sr0230/codelink"
"Bug Tracker" = "https://github.com/j8sr0230/codelink/issues"
